--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -28,7 +28,7 @@
 	overflow:hidden;
 	border:2px solid black;
 	/*background-color:#fefbf4;*/
-	background-image:url(img/gradient.jpg);
+	background-image:url(img/Spruce Parkland2.jpg);
   }
   
 
