--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -180,7 +180,7 @@
 	left:0px;
 	height:26px;
 	width:100%;
-	background-color:#201e1b;
+	background-color:#140c49; /*#201e1b;*/
 	color:#ccc;
 	font-size:10px;
 	padding:3px;
@@ -995,7 +995,7 @@
     float:left;
     width:180px;
     height:24px;
-    background-image:url("img/timeglider.png");
+    background-image:url("img/trowel.png");  /*("img/timeglider.png");*/
     background-repeat:no-repeat;
     margin-top:2px;
     margin-left:16px;
