--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -993,8 +993,8 @@
 
 .timeglider-logo {
     float:left;
-    width:100%;
-    height:24px;
+    width:10px;
+    height:10px;
     background-image:url("img/trowel.png");  /*("img/timeglider.png");*/
     background-repeat:no-repeat;
     margin-top:2px;
