--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -993,8 +993,8 @@
 
 .timeglider-logo {
     float:left;
-    width:100%;
-    height:100%;
+    width:43px;
+    height:30px;
     background-image:url("img/logo3.png");  /*("img/timeglider.png");*/
     background-repeat:no-repeat;
     margin-top:2px;
