--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1587,9 +1587,10 @@ background-color:#717171;
 
 .tg-full_modal-vidimg {
 	width:50%;
+	height:50%;
 	float:right;
 	margin-right:2%;
-	margin-top:-12px;
+	margin-top:-2%;
 }
 
 
@@ -1607,7 +1608,7 @@ background-color:#717171;
 }
 
 .tg-modal-video iframe {
-	position:relative;
+	position:absolute;
 	float:left;
 	width:100%;
 }
