--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1416,7 +1416,7 @@
 
 .tg-iframe-modal iframe {
 	width:50%;
-	height:350px;
+	height:50%;
 	border:none;
 }
 
@@ -1599,6 +1599,7 @@ background-color:#717171;
 }
 .tg-modal-video, .tg-modal_map {
 	width:50%;
+	height: 50%;
 }
 
 .tg-modal_map {
@@ -1611,6 +1612,7 @@ background-color:#717171;
 	position:absolute;
 	float:left;
 	width:50%;
+	height: 50%;
 }
 
 
