--- a/css/docs.css
+++ b/css/docs.css
@@ -9,7 +9,7 @@ body {
 
 
 pre {
-	background-color:#F0F0F0;
+	background-color:#bcadad;/*#F0F0F0;*/
 	padding:16px;
 	border:1px solid #CCC;
 	margin:8px 24px;
