--- a/docs-style.css
+++ b/docs-style.css
@@ -91,12 +91,12 @@ h4 {
 }
 
 .tg-sample-nav ul li {
-	float:none;
+	float:left;
 	margin:0;
 	border-right:1px solid #ccc;
 	padding:4px 8px;
 	background-color:#fff;
-	font-size:13px;
+	font-size:20px;
 	
 }
 
