--- a/docs-style.css
+++ b/docs-style.css
@@ -217,9 +217,9 @@ h4 {
 h1 {
 	margin:0 0 0px 0;
 	padding:0;
-	font-size:18px;
+	font-size:26px;
 	font-weight:700;
-	color:black;
+	color:#228B22;
 }
 
 .tagline {
