--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1584,8 +1584,9 @@ background-color:#717171;
 }
 
 .tg-full_modal-vidimg {
-	width:50%;
+	width:100%;
 	height:100%;
+	object-fit: contain;
 	float:right;
 	margin-right:2%;
 	margin-top:-2%;
