--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1586,7 +1586,7 @@ background-color:#717171;
 .tg-full_modal-vidimg {
 	width:100%;
 	height:100%;
-	object-fit: contain;
+	object-fit: scale-down;
 	float:right;
 	margin-right:2%;
 	margin-top:-2%;
