--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1584,9 +1584,10 @@ background-color:#717171;
 }
 
 .tg-full_modal-vidimg {
+	width: 50%
 	float:right;
 	margin-right:2%;
-	margin-top:2%;
+	margin-top:-2%;
 }
 
 
