--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1585,6 +1585,8 @@ background-color:#717171;
 
 .tg-full_modal-vidimg {
 	float: right;
+	width: 50%;
+	height:100%;
 	margin-right:2%;
 	margin-top:-4%;
 }
