--- a/timeglider/Timeglider.css
+++ b/timeglider/Timeglider.css
@@ -1586,6 +1586,7 @@ background-color:#717171;
 .tg-full_modal-vidimg {
 	float: right;
 	width: 50%;
+	overflow: visible;
 	margin-right:2%;
 	margin-top:-2%;
 }
